# psibot

./: .flake8  .gitignore  .prettierrc.json  .pylintrc  .yarnrc.yml  README.md  Taskfile.yml  docker-compose.infra.yaml  lerna.json  nx.json  package.json  pyproject.toml  tox.ini  tsconfig.json  yarn.config.cjs
.cursor/rules/: backward-compatibility.mdc  css.mdc  dont-run-backend.mdc  good-typing.mdc  local-storage.mdc  nullish-in-contracts.mdc  prefer-const.mdc  react.no-external-classes.mdc  repository-tools.mdc  reuse-solutions.mdc  use-browser.mdc
.docker/: infra.compose.yaml
.yarn/: constraints.yml
apps/miniapp/: package.json
apps/miniapp/src/: App.css
apps/miniapp/src/components/: FileUpload.tsx  UserProfile.tsx
apps/server/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/server/src/: config.ts  index.ts  worker.ts
apps/server/src/activities/: index.ts
apps/server/src/workflows/: pipeline.workflow.ts
lib/celery_reactive/: __init__.py  reactive_results.py
lib/celery_reactive/test/: app.py  config.py  tasks.py  test.py
services/miniapp/: package-lock.json  vite.config.ts
services/miniapp/src/: App.css  App.tsx
services/server/: pyproject.toml  tox.ini
services/server/src/app/: config.py
services/server/src/shared/: device.py  hugging_face.py  logging.py  print.py  time.py
src/: __init__.py
src/app/: config.py
src/app/adapters/celery_runner/: pipeline_runner.py  safe_async_base_task.py  singleton.py
src/app/entrypoints/: main.py  worker.py
src/shared/: __init__.py  device.py  helpers.py
(+209 files in other folders)
